--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -19,6 +19,210 @@ p {
   line-height: 1.75;
 }
 
+ul {
+		list-style: disc;
+		margin: 0 0 _size(element-margin) 0;
+		padding-left: 1em;
+
+		li {
+			padding-left: 0.5em;
+		}
+
+		&.alt {
+			list-style: none;
+			padding-left: 0;
+
+			li {
+				border-top: solid 2px _palette(border);
+				padding: 0.5em 0;
+
+				&:first-child {
+					border-top: 0;
+					padding-top: 0;
+				}
+			}
+		}
+
+		&.icons {
+			cursor: default;
+			list-style: none;
+			padding-left: 0;
+
+			li {
+				display: inline-block;
+				padding: 0 1em 0 0;
+
+				&:last-child {
+					padding-right: 0;
+				}
+
+				.icon {
+					&:before {
+						font-size: 1.5em;
+					}
+				}
+			}
+		}
+
+		&.actions {
+			cursor: default;
+			list-style: none;
+			padding-left: 0;
+
+			li {
+				display: inline-block;
+				padding: 0 (_size(element-margin) * 0.5) 0 0;
+				vertical-align: middle;
+
+				&:last-child {
+					padding-right: 0;
+				}
+			}
+
+			&.small {
+				li {
+					padding: 0 (_size(element-margin) * 0.25) 0 0;
+				}
+			}
+
+			&.vertical {
+				li {
+					display: block;
+					padding: (_size(element-margin) * 0.5) 0 0 0;
+
+					&:first-child {
+						padding-top: 0;
+					}
+
+					> * {
+						margin-bottom: 0;
+					}
+				}
+
+				&.small {
+					li {
+						padding: (_size(element-margin) * 0.25) 0 0 0;
+
+						&:first-child {
+							padding-top: 0;
+						}
+					}
+				}
+			}
+
+			&.fit {
+				display: table;
+				margin-left: (_size(element-margin) * -0.5);
+				padding: 0;
+				table-layout: fixed;
+				width: calc(100% + #{(_size(element-margin) * 0.5)});
+
+				li {
+					display: table-cell;
+					padding: 0 0 0 (_size(element-margin) * 0.5);
+
+					> * {
+						margin-bottom: 0;
+					}
+				}
+
+				&.small {
+					margin-left: (_size(element-margin) * -0.25);
+					width: calc(100% + #{(_size(element-margin) * 0.25)});
+
+					li {
+						padding: 0 0 0 (_size(element-margin) * 0.25);
+					}
+				}
+			}
+		}
+
+		&.labeled-icons {
+			list-style: none;
+			padding: 0;
+
+			li {
+				line-height: 1.75em;
+				margin: 1.5em 0 0 0;
+				padding-left: 2.25em;
+				position: relative;
+
+				&:first-child {
+					margin-top: 0;
+				}
+
+				a {
+					color: inherit;
+				}
+
+				h3 {
+					color: _palette(fg-light);
+					left: 0;
+					position: absolute;
+					text-align: center;
+					top: 0;
+					width: 1em;
+				}
+			}
+		}
+	}
+
+  /* Footer */
+
+  	#footer {
+  		bottom: 0;
+  		left: 0;
+  		padding: 0 $size-header-pad ($size-header-pad + _size(element-margin)) 0;
+  		position: fixed;
+  		text-align: right;
+  		width: $size-header-width;
+
+  		.icons {
+  			margin: (_size(element-margin) * 0.5) 0 0 0;
+
+  			a {
+  				color: _palette(accent2, fg-light);
+  			}
+  		}
+
+  		.copyright {
+  			color: _palette(accent2, fg-light);
+  			font-size: 0.8em;
+  			list-style: none;
+  			margin: (_size(element-margin) * 0.5) 0 0 0;
+  			padding: 0;
+
+  			li {
+  				border-left: solid 1px _palette(accent2, border);
+  				display: inline-block;
+  				line-height: 1em;
+  				margin-left: 0.75em;
+  				padding-left: 0.75em;
+
+  				&:first-child {
+  					border-left: 0;
+  					margin-left: 0;
+  					padding-left: 0;
+  				}
+
+  				a {
+  					color: inherit;
+  				}
+  			}
+  		}
+  	}
+/* Icon */
+
+	.icon {
+		@include icon;
+		border-bottom: none;
+		position: relative;
+
+		> .label {
+			display: none;
+		}
+	}
+
 .text-faded {
   color: rgba(255, 255, 255, 0.3);
 }
@@ -206,6 +410,8 @@ p {
   font-weight: bold;
   color: #e6a756;
 }
+
+
 
 @media (min-width: 992px) {
   .list-hours {
