removed page.title from pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
       <span class="site-heading-upper text-primary mb-3">{{ site.title }}</span>
-      <span class="site-heading-lower">{{ page.title }}</span>
+      <!-- <span class="site-heading-lower">{{ page.title }}</span> -->
     </h1>
 
     <!-- Navigation -->
