--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,14 +45,14 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item px-lg-4 {% if page.title == 'about' %}active{% endif %}">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+            <li class="nav-item px-lg-4 {% if page.title == 'research' %}active{% endif %}">
+              <a class="nav-link text-uppercase text-expanded" href="research.html">Research</a>
             </li>
-            <li class="nav-item {% if page.title == 'products' %}active{% endif %} px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+            <li class="nav-item {% if page.title == 'cv' %}active{% endif %} px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="cv.html">CV</a>
             </li>
-            <li class="nav-item {% if page.title == 'store' %}active{% endif %} px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+            <li class="nav-item {% if page.title == 'blog' %}active{% endif %} px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="blog.html">Blog</a>
             </li>
           </ul>
         </div>
