--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,18 +9,18 @@
     <meta name="author" content="">
 
     <title>{{ site.title }}</title>
-    <link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/business-casual.min.css" rel="stylesheet">
+    <link href="/css/business-casual.css" rel="stylesheet">
 
   </head>
 
@@ -34,25 +34,25 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a> -->
+        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item px-lg-4 {% if page.title == 'index' %}active{% endif %}">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Home
-                <span class="sr-only">(current)</span>
+              <a class="nav-link text-uppercase text-expanded" href="/index.html">Home
+                <!-- <span class="sr-only">(current)</span> -->
               </a>
             </li>
             <li class="nav-item px-lg-4 {% if page.title == 'research' %}active{% endif %}">
-              <a class="nav-link text-uppercase text-expanded" href="research.html">Research</a>
+              <a class="nav-link text-uppercase text-expanded" href="/research.html">Research</a>
             </li>
             <li class="nav-item {% if page.title == 'cv' %}active{% endif %} px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="cv.html">CV</a>
+              <a class="nav-link text-uppercase text-expanded" href="/cv.html">CV</a>
             </li>
-            <li class="nav-item {% if page.title == 'blog' %}active{% endif %} px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="blog.html">Blog</a>
+            <li class="nav-item px-lg-4 {% if page.title == 'blog' %}active{% endif %} {% if page.layout == 'post' %}active{% endif %}">
+              <a class="nav-link text-uppercase text-expanded" href="/blog.html">Blog</a>
             </li>
           </ul>
         </div>
@@ -90,8 +90,8 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
 
