--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
     <meta name="author" content="">
 
     <title>{{ site.title }}</title>
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon" />
 
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -20,7 +20,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/css/business-casual.css" rel="stylesheet">
+    <link href="/assets/css/business-casual.css" rel="stylesheet">
+    <link href="/assets/css/custom.css" rel="stylesheet">
 
   </head>
 
