--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -1,19 +1,17 @@
-@import "variables";
-@import "mixins";
-@import "global";
-@import "navbar";
-@import "buttons";
-@import "intro";
-@import "cta";
-@import "about";
-@import "products";
-@import "store";
-@import "footer";
-@import "bootstrap-overrides";
-@import "vars.scss";
-@import "skel.scss";
-@import "functions.scss";
-@import "syntax-highlighting.scss";
+@import 'libs/vars';
+@import 'libs/functions';
+@import 'libs/mixins';
+@import 'libs/syntax-highlighting';
+@import url('font-awesome.min.css');
+
+/*
+	Strata by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+*/
+
+/* Main */
+
 
 
 /* Icon */
@@ -22,12 +20,14 @@
 		@include icon;
 		border-bottom: none;
 		position: relative;
-    color: #e6a756;
 
 		> .label {
 			display: none;
 		}
-
+    a:hover {
+      color: #0056b3;
+      text-decoration: none;
+    }
 	}
 
 
@@ -35,7 +35,7 @@
 
 	ol {
 		list-style: decimal;
-		margin: 0 0 _size(element-margin) 0;
+		margin: 0 0 0 0;
 		padding-left: 1.25em;
 
 		li {
@@ -95,7 +95,7 @@
 
 			li {
 				display: inline-block;
-				padding: 0 (_size(element-margin) * 0.5) 0 0;
+				padding: 0;
 				vertical-align: middle;
 
 				&:last-child {
@@ -178,6 +178,10 @@
 				a {
 					color: inherit;
 				}
+        a:hover {
+          color: #0056b3;
+          text-decoration: none;
+        }
 
 				h3 {
 					color: _palette(fg-light);
@@ -192,5 +196,5 @@
 	}
 
 	dl {
-		margin: 0 0 _size(element-margin) 0;
+		margin: 0;
 	}
