updating favicon link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
     <meta name="author" content="">
 
     <title>{{ site.title }}</title>
-    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon" />
 
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
