--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,6 @@
     <meta name="author" content="">
 
     <title>{{ site.title }}</title>
-    <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon" />
 
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -22,6 +20,10 @@
     <!-- Custom styles for this template -->
     <link href="/assets/css/business-casual.css" rel="stylesheet">
     <link href="/assets/css/custom.css" rel="stylesheet">
+
+    <!-- favicon -->
+    <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon" />
 
   </head>
 
