--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
     <link href="/assets/css/custom.css" rel="stylesheet">
 
     <!-- favicon -->
-    <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon" />
 
   </head>
 
