--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,22 +8,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{{ site.title }}</title>
+    <title> {{ site.title }} </title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/assets/css/business-casual.css" rel="stylesheet">
-    <link href="/assets/css/custom.css" rel="stylesheet">
-
-    <!-- favicon -->
-    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon" />
+    <link href="css/business-casual.min.css" rel="stylesheet">
 
   </head>
 
@@ -31,31 +26,31 @@
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
       <span class="site-heading-upper text-primary mb-3">{{ site.title }}</span>
-      <!-- <span class="site-heading-lower">{{ page.title }}</span> -->
+      <!-- <span class="site-heading-lower">Business Casual</span> -->
     </h1>
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
-        <!-- <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a> -->
-        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">{{ site.title }}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button> -->
+        </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
-            <li class="nav-item px-lg-4 {% if page.title == 'index' %}active{% endif %}">
-              <a class="nav-link text-uppercase text-expanded" href="/index.html">Home
-                <!-- <span class="sr-only">(current)</span> -->
+            <li class="nav-item active px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="index.html">Home
+                <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item px-lg-4 {% if page.title == 'research' %}active{% endif %}">
-              <a class="nav-link text-uppercase text-expanded" href="/research.html">Research</a>
+            <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
             </li>
-            <li class="nav-item {% if page.title == 'cv' %}active{% endif %} px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="/cv.html">CV</a>
+            <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
             </li>
-            <li class="nav-item px-lg-4 {% if page.title == 'blog' %}active{% endif %} {% if page.layout == 'post' %}active{% endif %}">
-              <a class="nav-link text-uppercase text-expanded" href="/blog.html">Blog</a>
+            <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
             </li>
           </ul>
         </div>
@@ -66,35 +61,13 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <ul class="icons">
-          {% if site.twitter_username %}
-          <li><a href="https://twitter.com/{{ site.twitter_username }}" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-          {% endif %}
-          {% if site.linkedin_username %}
-          <li><a href="https://linkedin.com/in/{{ site.linkedin_username }}" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-          {% endif %}
-          {% if site.instagram_username %}
-          <li><a href="https://www.instagram.com/{{ site.instagram_username }}" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-          {% endif %}
-          {% if site.github_username %}
-          <li><a href="https://github.com/{{ site.github_username }}" class="icon fa-github"><span class="label">Github</span></a></li>
-          {% endif %}
-          {% if site.gscholar %}
-          <li><a href="{{ site.gscholar }}" class="icon fa-graduation-cap"><span class="label">Google</span></a></li>
-          {% endif %}
-          {% if site.email %}
-          <li><a href="mailto:{{ site.email }}" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-          {% endif %}
-          {% if site.feed_icon %}
-          <li><a href="{{ site.github.url }}/{{ site.feed_icon }}.xml" class="icon fa-rss"><span class="label">Feed</span></a></li>
-          {% endif %}
-        </ul>
+        <p class="m-0 small">Copyright &copy; Your Website 2017</p>
       </div>
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="/vendor/jquery/jquery.min.js"></script>
-    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
 
