--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,19 +38,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
-            <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Home
-                <span class="sr-only">(current)</span>
+            <li class="nav-item px-lg-4 {% if page.title == 'index' %}active{% endif %}">
+              <a class="nav-link text-uppercase text-expanded" href="/index.html">Home
+                <!-- <span class="sr-only">(current)</span> -->
               </a>
             </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+            <li class="nav-item px-lg-4 {% if page.title == 'research' %}active{% endif %}">
+              <a class="nav-link text-uppercase text-expanded" href="/research.html">Research</a>
             </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
+            <li class="nav-item {% if page.title == 'cv' %}active{% endif %} px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="/cv.html">CV</a>
             </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
+            <li class="nav-item px-lg-4 {% if page.title == 'blog' %}active{% endif %} {% if page.layout == 'post' %}active{% endif %}">
+              <a class="nav-link text-uppercase text-expanded" href="/blog.html">Blog</a>
             </li>
           </ul>
         </div>
