--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/business-casual.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
   </head>
 
@@ -61,7 +62,13 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2017</p>
+        <ul class="icons horizontal-list">
+          <!-- <li><a href="https://twitter.com/{{ site.twitter_username }}" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+          <!-- <li><a href="https://www.linkedin.com/in/" class="icon fa-linkedin"><span class="label">Facebook</span></a></li> -->
+          <li><a href="https://scholar.google.co.nz/citations?hl=en&user={{ site.scholar_username }}" class="icon fa-graduation-cap"><span class="label"> Google Scholar</span></a></li>
+          <li><a href="https://github.com/{{ site.github_username }}" class="icon fa-github"><span class="label">Github</span></a></li>
+          <li><a href="mailto:{{ site.email }}" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+        </ul>
       </div>
     </footer>
 
