--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,5 +1,5 @@
 {% if page.comments %}
-<div id="disqus_thread"></div>
+<div id="disqus_thread" class="disqus_thread">
 <script>
 
 /**
@@ -13,10 +13,11 @@ this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your pag
 */
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https://timwilliams.disqus.com/embed.js';
+s.src = 'https://tomlogan.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</div>
 {% endif %}
