--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,15 +11,19 @@
     <title> {{ site.title }} </title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/business-casual.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/css/business-casual.min.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/syntax.css">
+    <!-- favicon -->
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 
   </head>
 
@@ -50,7 +54,7 @@
             <li class="nav-item {% if page.title == 'cv' %}active{% endif %} px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="/cv.html">CV</a>
             </li>
-            <li class="nav-item px-lg-4 {% if page.title == 'blog' %}active{% endif %} {% if page.layout == 'post' %}active{% endif %}">
+            <li class="nav-item px-lg-4 {% if page.title == 'blogs' %}active{% endif %} {% if page.layout == 'post' %}active{% endif %}">
               <a class="nav-link text-uppercase text-expanded" href="/blog.html">Blog</a>
             </li>
           </ul>
@@ -73,8 +77,8 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
 
