--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,13 +49,13 @@
               </a>
             </li>
             <li class="nav-item px-lg-4 {% if page.title == 'research' %}active{% endif %}">
-              <a class="nav-link text-uppercase text-expanded" href="/research.html">Research</a>
+              <a class="nav-link text-uppercase text-expanded" href="/research">Research</a>
             </li>
             <li class="nav-item {% if page.title == 'cv' %}active{% endif %} px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="/cv.html">CV</a>
+              <a class="nav-link text-uppercase text-expanded" href="/cv">CV</a>
             </li>
             <li class="nav-item px-lg-4 {% if page.title == 'blogs' %}active{% endif %} {% if page.layout == 'post' %}active{% endif %}">
-              <a class="nav-link text-uppercase text-expanded" href="/blog.html">Blog</a>
+              <a class="nav-link text-uppercase text-expanded" href="http://reckoningrisk.com">Blog</a>
             </li>
           </ul>
         </div>
@@ -79,7 +79,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    
+
     {% if jekyll.environment == 'production' %}
     {% include analytics.html %}
     {% endif %}
