--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,9 +48,9 @@
                 <!-- <span class="sr-only">(current)</span> -->
               </a>
             </li>
-            <li class="nav-item px-lg-4 {% if page.title == 'research' %}active{% endif %}">
+            <!-- <li class="nav-item px-lg-4 {% if page.title == 'research' %}active{% endif %}">
               <a class="nav-link text-uppercase text-expanded" href="/research">Research</a>
-            </li>
+            </li> -->
             <li class="nav-item {% if page.title == 'cv' %}active{% endif %} px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="/cv">CV</a>
             </li>
