changing blog link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
               <a class="nav-link text-uppercase text-expanded" href="/cv">CV</a>
             </li>
             <li class="nav-item px-lg-4 {% if page.title == 'blogs' %}active{% endif %} {% if page.layout == 'post' %}active{% endif %}">
-              <a class="nav-link text-uppercase text-expanded" href="http://reckoningrisk.com">Blog</a>
+              <a class="nav-link text-uppercase text-expanded" href="/blog">Blog</a>
             </li>
           </ul>
         </div>
