--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
     <footer class="footer text-faded text-center py-5">
       <div class="container">
         <ul class="icons horizontal-list">
-          <!-- <li><a href="https://twitter.com/{{ site.twitter_username }}" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+          <li><a href="https://twitter.com/TimWilliamsNZ" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
           <!-- <li><a href="https://www.linkedin.com/in/" class="icon fa-linkedin"><span class="label">Facebook</span></a></li> -->
           <li><a href="https://scholar.google.co.nz/citations?hl=en&user={{ site.scholar_username }}" class="icon fa-graduation-cap"><span class="label"> Google Scholar</span></a></li>
           <li><a href="https://github.com/{{ site.github_username }}" class="icon fa-github"><span class="label">Github</span></a></li>
